welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: '<-' expected but '=' found.
for (i = 1 to 16) {droite()
       ^Runner:8: error: illegal start of simple expression
	}
        ^