welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (!estFaceMur()) {avance()}
for (i = 1 to 16) {droite()
avance()
}

